chitter-bright: fix contrast on single column right-side links

--- a/app/javascript/styles/chitter-bright.scss
+++ b/app/javascript/styles/chitter-bright.scss
@@ -446,3 +446,7 @@ a.status-card:hover, a.status-card.compact:hover {
 .getting-started__footer p a {
   color: inherit;
 }
+
+a.column-link--transparent {
+  color: $ui-primary-color;
+}
